os/bluestore: memorize layout of BlueFS on management.

Fixes: https://tracker.ceph.com/issues/41744
Signed-off-by: Radoslaw Zarzynski <rzarzyns@redhat.com>